<resources>
    <string name="app_name">EdgeDetection</string>
    <string name="camera_grant">Grant camera permission!</string>
    <string name="press_again_logout">Press back again.</string>
    <string name="crop">Crop</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="enhance">Enhance</string>
    <string name="black">Black White</string>
    <string name="rotate">Rotate</string>
    <string name="reset">Reset</string>
    <string name="scan">Scanning</string>

    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="auto">AUTO</string>
    <string name="crop_header">Crop</string>
    <string name="preview">Preview</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="submit_now">Submit now</string>
    <string name="add_new_image_error">You can\'t add more than 10 images</string>
</resources>
