<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".review.ReviewActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorBlack"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/previous_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@drawable/baseline_arrow_left_24" />

        <TextView
            android:id="@+id/current_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/previous_page"
            android:text="1/2"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@id/current_page"
            android:background="@drawable/baseline_arrow_right_24" />

    </LinearLayout>

    <ImageView
        android:id="@+id/paper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:background="#383838"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#383838"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#383838"
            android:orientation="horizontal"
            android:padding="12dp">

            <LinearLayout
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_delete_outline_24"
                    app:tint="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/delete"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/crop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_crop"
                    app:tint="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/crop"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rotate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_crop_rotate_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/rotate"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp"
            android:paddingRight="12dp"
            android:paddingBottom="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_images"
                android:layout_width="wrap_content"
                android:layout_height="64dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/save_draft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:text="@string/save_as_draft"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_submit_button"
                    android:minWidth="140dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/submit_now"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>